--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width-device-width, initial-scale=1, user-scalable=yes">
 		<title>T-Rex</title>
+
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-	<body>
+	<body onload="startGame()">
 		
 
 
