Game logic done, in working conditions.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body onload="startGame()">
-		
+		<audio id="audio" src="sounds/Pop-sound-effect.mp3"></audio>	
+		<audio id="audio1" src="sounds/Retro-game-over-sound-effect.mp3"></audio>	
 
 
 		<script type="text/javascript" src="javascript.js"></script>
